@@ -521,6 +521,25 @@ vec3 CRT(sampler2D inImage, vec2 inCoords)
 }
 // ------------------------------------------------------------------------------------------
 
+// =======================================================================================
+// CRTBadSignal - original at https://www.shadertoy.com/view/ltV3z1
+// =======================================================================================
+vec3 CRTBadSignal(sampler2D inImage, vec2 inCoords)
+{
+	vec2 uv = inCoords;
+	float t = uTime;
+	float fx = 0.001 + 25.0 * abs(sin(t) / 10.0) - mod(1.0 + t, 7.0);
+	const float s = 50.0; // noise intensity
+	float x = (floor(uv.x * 300.0)) + (floor(uv.y * 300.0)) * (t * 0.1);
+	vec4 dtv = vec4(mod((mod(x, 2.0) + 1.0) * (mod(x, 0.0) + 0.0), 0.01) - 0.005) * s;
+	vec3 col = clamp(vec3(0.1, 0.1, 0.1) + dtv.xyz / fx, vec3(0.0), vec3(0.1));
+	
+	col.xyz += texture(inImage,uv).xyz;
+	
+	return col;
+}
+// ------------------------------------------------------------------------------------------
+
 
 // =======================================================================================
 // FXAA - original at https://www.shadertoy.com/view/MdyyRt
@@ -716,6 +735,12 @@ void main()
 			hdrColor *= exposure;
 			break;
 		case 8:
+			hdrColor = CRTBadSignal(scene, TexCoords);
+			bloomColor = CRT(bloomBlur, TexCoords); // yes CRT, not a typo
+			if(bloom)  hdrColor += bloomColor;
+			hdrColor *= exposure;
+			break;
+		case 9:
 			hdrColor = gravLens(scene, TexCoords);
 			bloomColor = gravLens(bloomBlur, TexCoords);
 			if(bloom)  hdrColor += bloomColor;
